# meson-clang-cl-mwe

./: meson.build  readme.md
src/: main.c  meson.build
src/mylib/: meson.build  mylib.c  mylib.h
